stretching fixed

--- a/Task1-HTML-CSS/style.css
+++ b/Task1-HTML-CSS/style.css
@@ -159,21 +159,20 @@ a:hover {
 .short-topic {
 	float: left;
 	width: 32%;
-	height: 210px;
 	position: relative;
 	padding-top: 60px;
+	padding-bottom: 45px;
 }
 
 .short-topic__img {
-	position: absolute;
 	padding: 0 30px;
+	float: left;
 }
 
 .short-topic__text {
 	color: #fff;
-	width: 70%;
-	right: 0;	
-	position: absolute;		
+	width: 60%;
+	float: left;
 }
 
 .short-topic__description {
@@ -256,6 +255,7 @@ a:hover {
 	border-bottom-width: 0px;
 	font-size: 5em;
 	font-weight: bold;
+	color: #787878;
 }
 
 .tab-control__tab:hover { 
@@ -331,16 +331,15 @@ a:hover {
 /* Row 3 */
 
 .row3 {
-	height: 205px;
 	background-color: #f77462;
 	color: #fff;
 	text-align: center;
+	padding: 50px 100px;
 }
 
 .row3__title {
 	font-size: 12em;
 	font-weight: bold;
-	padding-top: 45px;
 	line-height: 35pt;
 }
 
@@ -385,8 +384,9 @@ a:hover {
 }
 
 .news__item {
-	position: relative;
-	height: 150px;
+	overflow: hidden;
+    position: relative;
+    margin-bottom: 34px;
 }
 
 .date {
@@ -414,11 +414,10 @@ a:hover {
 }
 
 .article {
-	position: absolute;
 	float: left;
 	color: #000;
-	width: 420px;
-	right: 20px;
+	width: 75%;
+	margin-left: 30px;
 }
 
 .article__title {
@@ -445,26 +444,21 @@ a:hover {
 }
 
 .arrow {
-	width: 30px;
 	color: #f77462;
-	position: absolute;
-	right: 0;
-	bottom: 0;
 }
 
 .remark {
-	height: 173;
 	background-color: ececec;
 	margin-bottom: 40px;
-	padding-left: 30px;
+	padding: 25px;
 	position: relative;
 	font-size: 5.5em;
     line-height: 2em;
 }
 
 .remark__text {
-	width: 350px;
-	padding-top: 35px;
+	width: 70%;
+	padding-top: 15px;
 	color: #8c9193;
 }
 
@@ -483,10 +477,9 @@ a:hover {
 
 .footer {
 	position: relative;
-	height: 285px;
 	background-color: #6dc5dd;
 	color: #fff;	
-	padding: 40px 30px 0 30px;	
+	padding: 40px;	
 	border-radius: 0px 0px 6px 6px;
 }
 
@@ -498,6 +491,7 @@ a:hover {
 .column {
 	display: inline-block;
 	text-align: left;
+	width: 15%;
 }
 
 .column__item {
